# Projekt_PRiR

./: .gitignore  CMakeLists.txt  README.md
libs/matrix/: CMakeLists.txt
libs/matrix/include/: matrix.h
libs/matrix/src/: matrix.cpp
libs/matrix/unittests/: CMakeLists.txt
libs/matrix/unittests/src/: matrix_ut.cpp
libs/openmp/: CMakeLists.txt
libs/timing/: CMakeLists.txt
libs/timing/include/: timing.hpp
libs/timing/src/: timing.cpp
libs/util/: CMakeLists.txt
libs/util/include/: util.hpp
libs/util/src/: files.cpp  random.cpp  tables.cpp
src/: main.cpp
